# kudasai_rust

./: .gitignore  Cargo.toml  README.md  sample.env
.github/workflows/: rust.yml
sqlite/: sample.sql
src/: main.rs
src/commands/: add.rs  f1_predictor.rs  factorial.rs  math.rs  mod.rs
src/formulabot/: db.rs
