[package]
name = "rust_kudasai" # the name of the package
edition = "2021"
version = "0.0.1"    # the current version, obeying semver
authors = ["Shivam Solanki <98shim@gmail.com>"]

[dependencies]
dotenv = "0.15"
serenity = "0.11"
tokio = { version = "1.21.2", features = ["signal","macros", "rt-multi-thread"] }
tracing = "0.1.23"
tracing-subscriber = "0.3"